bug fixes, map, align divider, social

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -130,11 +130,19 @@ body {
     border-bottom: 1px solid #fafafa;
     padding-bottom: 0px !important;
     padding-top: 7px;
-    width: 350px;
+    width: 30%;
     filter: invert(20%);
     -webkit-filter: invert(20%);
     margin-bottom: 30px;
 }
+
+@media (max-width: 991px) {
+    .divider {
+        width: 75%;
+    }
+}
+
+
 
 .divider-img {
     width: 15px;
@@ -620,9 +628,12 @@ ul .btn {
     width: 85px;
     height: 85px;
     border-radius: 50%;
-    display: flex;
+    /*display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;*/
+    margin: 20px;
+    text-align: center;
+    padding-top: 20px;
 }
 .lg-icon {
     color: white;
@@ -654,4 +665,3 @@ ul .btn {
 #map {
     width: 100%;
     height: 400px;
-}
